# LCEM

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
src/: main.py
src/core/: solver.py
src/data/: loader.py
src/utils/: config.py
tests/: test_solver.py
