[project]
name = "comp-eng-model"
version = "0.1.0"
description = "Large-scale Computational Engineering Model"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0",
    "scipy>=1.12.0",
    "torch>=2.5.0", # For ML-surrogate models
    "pydantic>=2.0", # For strict config validation
    "dvc>=3.0.0",    # Data Version Control
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
